--- a/FolderTree/FolderTree.csproj
+++ b/FolderTree/FolderTree.csproj
@@ -50,9 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileSystemEssence.cs" />
-    <Compile Include="File.cs" />
-    <Compile Include="Folder.cs" />
+    <Compile Include="FileSystem\FileSystemEssence.cs" />
+    <Compile Include="FileSystem\File.cs" />
+    <Compile Include="FileSystem\TreeFolder.cs" />
     <Compile Include="FolderTreeWindow.cs">
       <SubType>Form</SubType>
     </Compile>
