--- a/FolderTree/FolderTree.csproj
+++ b/FolderTree/FolderTree.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileSystemTree\FileSystemEssence.cs" />
+    <Compile Include="FileSystemTree\TreeFolderService.cs" />
     <Compile Include="FileSystemTree\TreeFile.cs" />
     <Compile Include="FileSystemTree\TreeFolder.cs" />
     <Compile Include="FolderTreeWindow.cs">
